# CVAnalysis

./: .gitignore  review_code.js
.github/workflows/: build-deploy.yml  code-review.yml
.husky/_/: .gitignore  pre-commit
cv_checker_backend/: .env.example  .gitignore  README.md  pyproject.toml
cv_checker_backend/cv_checker_backend/: main.py  my_server.py  settings.py
cv_checker_backend/cv_checker_backend/api/v1/: api.py
cv_checker_backend/cv_checker_backend/api/v1/routes/: auth_routes.py  job_routes.py  user_routes.py
cv_checker_backend/cv_checker_backend/api/v2/: api.py
cv_checker_backend/cv_checker_backend/config/: cloudinary_config.py  oauth_config.py  openai_config.py
cv_checker_backend/cv_checker_backend/controllers/: auth_controller.py  job_controller.py  openai_controller.py  storage_controller.py  user_controller.py
cv_checker_backend/cv_checker_backend/core/: common.py  jwt.py  security.py  settings.py
cv_checker_backend/cv_checker_backend/db/: db_connector.py
cv_checker_backend/cv_checker_backend/middlewares/: auth_middleware.py
cv_checker_backend/cv_checker_backend/models/: job_models.py  user_model.py
cv_checker_backend/cv_checker_backend/routes/: auth_routes.py  job_routes.py
cv_checker_backend/tests/: job_controller.test.py
cv_checker_frontend/: .eslintrc.json  .gitignore  .prettierrc  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
cv_checker_frontend/src/: middleware.ts
cv_checker_frontend/src/apis/: job.api.ts  user.api.ts
cv_checker_frontend/src/app/: globals.css  layout.tsx  page.tsx  (+1 more)
(+52 files in other folders)
