[tool.poetry]
name = "cv-checker-backend"
version = "0.1.0"
description = ""
authors = ["Bilal Raza <success9262@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
authlib = "^1.3.1"
fastapi = "^0.111.1"
sqlmodel = "^0.0.21"
openai = "^1.37.1"
pypdf = "^4.3.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
itsdangerous = "^2.2.0"
psycopg = "^3.2.3"

[tool.poetry.scripts]
dev = "cv_checker_backend.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
